# Rust-Audio-Player-Application

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: main.rs
src/error/: error.rs
src/fstools/: cache.rs  mod.rs  select_file.rs
src/player/: audio_player.rs  byte_parser.rs  mod.rs  stream.rs  wav.rs
src/tui/: input.rs  mod.rs  tui.rs
